# fampp-core

./: Cargo.toml  README.md
locales/: en.toml  tr.toml
src/: main.rs
src/core/: config.rs  downloader.rs  extractor.rs  locale.rs  mod.rs  process.rs  registry.rs  settings.rs
