[package]
name = "famp-core"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.2"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.1.0"
